# meow_python

./: Makefile  main.py  pyproject.toml
VD_games/: cli.py  engine.py
VD_games/games/: prime.py  progression.py
VD_games/scripts/: VD_even.py  VD_gcd.py  brain_calc.py  vd_prime.py  vd_progression.py
meow_python/iploxz/VD_games/scripts/: VD_games.py
