[project]
name = "meow-python"
version = "0.3.0"
description = "Games project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["VD_games"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.14.2",
]

[project.scripts]
VD-games = "VD_games.scripts.VD_main:main"
VD-even = "VD_games.scripts.VD_even:main"
brain-calc = "VD_games.scripts.brain_calc:main"
VD-gcd = "VD_games.scripts.VD_gcd:main"
